# workspace

./: .gitmodules  .gitmodules~
workspace/OpenAndDecodeGPSTrackFiles/: mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro  untitled.pro.user.d8e7a6b  untitled.pro.user.e0b7371
workspace/build-untitled-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h  untitled
workspace/files/: T160224111030 (copy).gpx  T160224111030.gpx
workspace/files/G138/: T160224095343.gpx  T160224111030.gpx  T160224111249.gpx
workspace/files/MG8/: 2016-02-24 143907.gpx
workspace/log_record/: CMakeLists.txt  package.xml
workspace/log_record/src/: record.cpp
workspace/mavros/: ros-jade-mavlink_2015.7.7-0trusty_amd64.deb
workspace/mavros/libmavconn/: CMakeLists.txt
workspace/mavros/mavros/: CMakeLists.txt  mavros_plugins.xml
workspace/mavros/mavros/include/mavros/: setpoint_mixin.h
workspace/mavros/mavros/launch/: px4.launch  px4_config.yaml  px4_pluginlists.yaml  px4tele.launch
workspace/mavros/mavros/src/plugins/: local_position.cpp  setpoint_position.cpp  setpoint_velocity.cpp
workspace/mavros/mavros_extras/: CMakeLists.txt  mavros_plugins.xml
workspace/mavros/mavros_extras/msg/: ExtraFunctionReceiver.msg  FieldSize.msg  FieldSizeConfirm.msg  LaserDistance.msg  OffboardRoutePoints.msg  OffboardRoutePointsConfirm.msg  PositionSetpoint.msg  PumpController.msg  PumpStatus.msg  RPLidar.msg  Rabbot.msg  SonarDistance.msg  Viconmocap.msg
workspace/mavros/mavros_extras/src/plugins/: extra_function.cpp  extra_function_receiver.cpp  field_size.cpp  field_size_confirm.cpp  pump_status.cpp  (+13 more)
workspace/mavros/mavros_vision/: CMakeLists.txt  package.xml
workspace/mavros/mavros_vision/src/: vision.cpp
workspace/number/: CMakeLists.txt  package.xml
workspace/number/src/: number.cpp
workspace/offboard_set/: CMakeLists.txt  package.xml
workspace/offboard_set/launch/: imitate.launch  imitate.launch~  offboard.launch  px4tele_lidar.launch
workspace/offboard_set/src/: CalcHeight.cpp  field_size_set.cpp  offboard_setpoints.cpp  offboard_velocity.cpp  process_setpoints.cpp  publish_setpoints.cpp  receive_setpoints.cpp  setpoints_publisher.cpp  status_imitate.cpp
workspace/station/: CMakeLists.txt  package.xml
workspace/station/launch/: px4.launch
workspace/station/src/: Icons.qrc  camera.cpp  camera.h  change_log  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  painterWiget.cpp  painterWiget.h  receiver.cpp  receiver.h
workspace/station/src/launch/: px4USB.launch
workspace/station/src/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver.cpp  receiver.h
